--- a/isaac_ros_apriltag/config/oak_params.yaml
+++ b/isaac_ros_apriltag/config/oak_params.yaml
@@ -21,7 +21,7 @@
       i_tf_imu_from_descr: 'false'
       i_tf_parent_frame: oak_camera
     nn:
-      i_enable_passthrough: true
+      i_enable_passthrough: false
       i_disable_resize: true
       i_update_ros_base_time_on_ros_msg: true     # Handles cases in which the ROS time shifts forward or backward Should be called at regular intervals or on-change of ROS time, depending on monitoring.
     stereo:
@@ -34,7 +34,7 @@
       i_width: 1280
       i_height: 720
       i_publish_topic: true
-      i_enable_preview: true
+      i_enable_preview: false
       i_keep_preview_aspect_ratio: false
       i_set_isp_scale: true
       i_update_ros_base_time_on_ros_msg: true     # Handles cases in which the ROS time shifts forward or backward Should be called at regular intervals or on-change of ROS time, depending on monitoring.
